# server/swagger.yaml
@@ -77,6 +77,30 @@ paths:
         '500':
           description: error
 
+    patch:
+      summary: updates a user
+      tags: [User]
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          description: autogenerated userid by mongo
+          schema:
+            type: string
+      requestBody:
+        description: information update
+        content:
+          application/json:
+            schema: 
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: Deleted
+        '400':
+          description: does not exist
+        '500':
+          description: error
+
   # /users/:
     
 
@@ -148,10 +172,32 @@ paths:
           '500':
             description: error
       
-
+    patch:
+      summary: updates a class
+      tags: [Class]
+      parameters:
+        - name: classId
+          in: path
+          required: true
+          description: autogenrated classid
+          schema: 
+            type: string
+      requestBody:
+        description: information update
+        content:
+          application/json:
+            schema: 
+              $ref: '#/components/schemas/Class'
+      responses:
+        '200':
+          description: Class information updated
+        '400':
+          description: not available in databse
+        '500':
+          description: error
 
   
-  /classwork/getAllClassworks:
+  /classwork/getAllClassworks/:
     get:
       summary: Returns a list of classworks assigned.
       tags: [Classwork]
@@ -180,6 +226,68 @@ paths:
           description: created classwork
         '400':
           description: error
+
+  /classwork/{classworkId}:
+    get:
+      summary: particular class
+      tags: [Classwork]
+      description: something
+      parameters:
+        - name: classworkId
+          in: path
+          required: true
+          description: autogenerated class workid 
+          schema: 
+            type: string
+      responses:
+        '200':
+          description: classinfo
+        '400':
+          description: Couldn't find it
+        '500':
+          description: Cast to classworkId failed for value
+
+    delete:
+        summary: deletes a classwork
+        tags: [Classwork]
+        parameters:
+          - name: classworkId
+            in: path
+            required: true
+            description: autogenerated classworkid
+            schema: 
+              type: string
+        responses:
+          '200':
+            description: Deleted the classwork
+          '400':
+            description: not available in database
+          '500':
+            description: error
+    patch:
+      summary: updates a class
+      tags: [Classwork]
+      parameters:
+        - name: classworkId
+          in: path
+          required: true
+          description: autogenrated classid
+          schema: 
+            type: string
+      requestBody:
+        description: information update
+        content:
+          application/json:
+            schema: 
+              $ref: '#/components/schemas/Classwork'
+      responses:
+        '200':
+          description: Classwork information updated
+        '400':
+          description: not available in databse
+        '500':
+          description: error      
+
 
 
 
